Squashed beta-1.2.19_04
commit 7054cbc8e4d6a27e04c9da072eceee66fe3b1f23
Author: dpolivaev <dpolivaev>
Date:   Fri Sep 28 10:59:26 2012 +0300

    1802]: Settings lost : use proper user folder from appdata

commit 881fe131110d09732eb5a7e14f1022377b64cadc
Author: dpolivaev <dpolivaev>
Date:   Tue Sep 25 20:40:32 2012 +0300

    bzr to git

commit 1e2031b86c1f82ecf10a1d09bf948f19c6f21554
Author: Felix Natter <fnatter@gmx.net>
Date:   Mon Sep 24 22:58:57 2012 +0200

    migrate .bzrignore to .gitignore

commit e8271259aaa0fa0e825cf4286d2c22933de7a324
Author: dpolivaev <>
Date:   Mon Sep 24 22:28:28 2012 +0300

    -

commit ef28ee74faa9b9cb0b7a1a535bd36e62320ac9b0
Author: dpolivaev <>
Date:   Mon Sep 24 15:39:38 2012 +0300

    PortableApp based on launch4j

commit 8507ec8d46cfe4996e80bb8a4adedf871607be9b
Author: dpolivaev <>
Date:   Mon Sep 24 14:36:19 2012 +0300

    launch4j, portable app to be fixed

commit 996f386edfee55453211ff37512381b5224ad084
Author: dpolivaev <>
Date:   Sat Sep 22 15:05:52 2012 +0200

    bug fixes in html map writer

commit 32f3bc709269664a18155d1f94817a5291dbb94a
Author: dpolivaev <>
Date:   Sat Sep 22 14:23:27 2012 +0200

    -

commit 112ed9b57868a8327f6276bb68a5716dd2428739
Author: dpolivaev <>
Date:   Sat Sep 22 14:13:57 2012 +0200

    bug fix: do not cache styles set  by a  conditional style check

commit 26f15893da0fcd2055b665777d8243edc2ced3b4
Author: dpolivaev <>
Date:   Thu Sep 13 22:22:03 2012 +0200

    1791: Latex Formula: focus lost after using alt+enter ctrl+enter

commit c6d4d9edea7a159d6837013ef52920ed8ae266eb
Author: dpolivaev <>
Date:   Thu Sep 13 21:41:02 2012 +0200

    1793]: copy and paste format by FN keys

commit 70297810c3cea9212ad96246f1139de57340e982
Merge: 91fbe61 1274d08
Author: boercher <>
Date:   Wed Sep 5 00:59:58 2012 +0200

    merge from trunk

commit 1274d08d5684d7c617f26d76b5657df9896397ad
Author: boercher <>
Date:   Wed Sep 5 00:03:57 2012 +0200

    #1787: Node.setText(text) uses String args verbatim

